--- a/k8s/candle-feeder.yaml
+++ b/k8s/candle-feeder.yaml
@@ -18,7 +18,7 @@ spec:
       containers:
         - name: candle-feeder
           image: ghcr.io/ken-tunc/bittrader/bittrader-candle-feeder
-          imagePullPolicy: IfNotPresent
+          imagePullPolicy: Always
           env:
             - name: SPRING_PROFILES_ACTIVE
               value: prod
