--- a/bittrader-candle-api/src/main/resources/application.yaml
+++ b/bittrader-candle-api/src/main/resources/application.yaml
@@ -2,7 +2,7 @@ spring:
   application:
     name: bittrader-candle-api
   main:
-    web-application-type: reactive
+    web-application-type: none
   profiles:
     group:
       prod:
@@ -11,8 +11,6 @@ spring:
         - h2
       test:
         - h2
-  lifecycle:
-    timeout-per-shutdown-phase: 5s
-server:
-  shutdown: graceful
-  port: 8081
+  rsocket:
+    server:
+      port: 8081
