--- a/bittrader-web/src/main/resources/application.yaml
+++ b/bittrader-web/src/main/resources/application.yaml
@@ -14,4 +14,5 @@ server:
 bittrader:
   webjars:
     versions:
-      apexcharts: 3.30.0
+      apexcharts: ${apexchartsVersion}
+      bootstrap: ${bootstrapVersion}
