[web] Fix gradle properties.

--- a/bittrader-web/src/main/resources/application.yaml
+++ b/bittrader-web/src/main/resources/application.yaml
@@ -14,5 +14,5 @@ server:
 bittrader:
   webjars:
     versions:
-      apexcharts: ${apexchartsVersion}
-      bootstrap: ${bootstrapVersion}
+      apexcharts: @apexchartsVersion@
+      bootstrap: @bootstrapVersion@
