--- a/bittrader-order-api/src/main/resources/config/application-bitflyer.yaml
+++ b/bittrader-order-api/src/main/resources/config/application-bitflyer.yaml
@@ -2,3 +2,5 @@ bittrader:
   external:
     bitflyer:
       url: https://api.bitflyer.com/v1
+      access-key: ${BITFLYER_ACCESS_KEY:access-key}
+      secret-key: ${BITFLYER_SECRET_KEY:secret-key}
