Add order-api k8s manifest file.

--- a/bittrader-order-api/src/main/resources/application.yaml
+++ b/bittrader-order-api/src/main/resources/application.yaml
@@ -5,8 +5,7 @@ spring:
     web-application-type: reactive
   profiles:
     group:
-      prod:
-        - demo
+      prod: []
       local:
         - demo
       test:
