--- a/.github/workflows/build-diagrams.yml
+++ b/.github/workflows/build-diagrams.yml
@@ -14,6 +14,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: Setup Graphviz
+      uses: ts-graphviz/setup-graphviz@v1
     - name: Set up Python 3.10
       uses: actions/setup-python@v2
       with:
