--- a/bittrader-web/src/main/resources/config/application-prod.yaml
+++ b/bittrader-web/src/main/resources/config/application-prod.yaml
@@ -2,3 +2,5 @@ bittrader:
   internal:
     candle-api:
       url: http://bittrader-candle-api
+    order-api:
+      url: http://bittrader-order-api
