[web] Add basic auth.

--- a/bittrader-web/src/main/resources/application.yaml
+++ b/bittrader-web/src/main/resources/application.yaml
@@ -5,8 +5,11 @@ spring:
     web-application-type: reactive
   profiles:
     group:
+      prod:
+        - auth
       local:
         - dev
+        - auth
       test:
         - dev
 server:
