[order-scheduler] Add unit tests.

--- a/bittrader-order-scheduler/src/main/resources/application.yaml
+++ b/bittrader-order-scheduler/src/main/resources/application.yaml
@@ -3,9 +3,11 @@ spring:
     name: bittrader-order-scheduler
   profiles:
     group:
-      prod: []
+      prod:
+        - scheduling
       local:
         - dev
+        - scheduling
       test:
         - dev
     include:
