[candle-api] Fix concurrency.

--- a/bittrader-order-scheduler/src/main/resources/config/application-scheduling.yaml
+++ b/bittrader-order-scheduler/src/main/resources/config/application-scheduling.yaml
@@ -1,6 +1,6 @@
 bittrader:
   scheduling:
-    trade-cron: "*/1 * * * * *"
-    optimize-cron: "0 * * * * *"
+    trade-cron: "0 * * * * *"
+    optimize-cron: "0 0 * * * *"
     product-code: BTC_JPY
     duration: MINUTES
