--- a/bittrader-web/src/main/resources/config/application-auth.yaml
+++ b/bittrader-web/src/main/resources/config/application-auth.yaml
@@ -5,5 +5,7 @@ bittrader:
     role: "USER"
     exclude-paths:
       - "/"
+      - "/favicon.ico"
       - "/charts/**"
       - "/webjars/**"
+      - "/actuator/**"
