--- a/k8s/order-scheduler.yaml
+++ b/k8s/order-scheduler.yaml
@@ -19,6 +19,22 @@ spec:
         - name: order-scheduler
           image: ghcr.io/ken-tunc/bittrader/bittrader-order-scheduler
           imagePullPolicy: Always
+          ports:
+            - containerPort: 8083
+          livenessProbe:
+            httpGet:
+              path: /actuator/health/liveness
+              port: 8083
+            initialDelaySeconds: 10
+            periodSeconds: 5
+            timeoutSeconds: 1
+          readinessProbe:
+            httpGet:
+              path: /actuator/health/liveness
+              port: 8083
+            initialDelaySeconds: 10
+            periodSeconds: 5
+            timeoutSeconds: 1
           env:
             - name: SPRING_PROFILES_ACTIVE
               value: prod
