--- a/k8s/candle-api.yaml
+++ b/k8s/candle-api.yaml
@@ -37,6 +37,20 @@ spec:
           imagePullPolicy: Always
           ports:
             - containerPort: 8081
+          livenessProbe:
+            httpGet:
+              path: /actuator/health/liveness
+              port: 8081
+            initialDelaySeconds: 10
+            periodSeconds: 5
+            timeoutSeconds: 1
+          readinessProbe:
+            httpGet:
+              path: /actuator/health/liveness
+              port: 8081
+            initialDelaySeconds: 10
+            periodSeconds: 5
+            timeoutSeconds: 1
           env:
             - name: SPRING_PROFILES_ACTIVE
               value: prod
