--- a/bittrader-web/src/main/resources/config/application-management.yaml
+++ b/bittrader-web/src/main/resources/config/application-management.yaml
@@ -1,10 +1,3 @@
-management:
-  endpoint:
-    health:
-      probes:
-        enabled: true
-  health:
-    livenessstate:
-      enabled: true
-    readinessstate:
-      enabled: true
+bittrader:
+  management:
+    enabled: true
