Enable webclient AutoConfigurations.

--- a/bittrader-candle-feeder/src/main/resources/config/application-bitflyer.yaml
+++ b/bittrader-candle-feeder/src/main/resources/config/application-bitflyer.yaml
@@ -1,4 +1,5 @@
 bittrader:
   external:
     bitflyer:
-      endpoint: wss://ws.lightstream.bitflyer.com/json-rpc
+      websocket:
+        endpoint: wss://ws.lightstream.bitflyer.com/json-rpc
