--- a/k8s/base/candle-api.yaml
+++ b/k8s/base/candle-api.yaml
@@ -20,6 +20,7 @@ metadata:
   labels:
     app: candle-api
     tier: backend
+    probe: actuator
 spec:
   replicas: 2
   selector:
@@ -37,20 +38,6 @@ spec:
           imagePullPolicy: Always
           ports:
             - containerPort: 8080
-          livenessProbe:
-            httpGet:
-              path: /actuator/health/liveness
-              port: 8080
-            initialDelaySeconds: 15
-            periodSeconds: 10
-            timeoutSeconds: 5
-          readinessProbe:
-            httpGet:
-              path: /actuator/health/liveness
-              port: 8080
-            initialDelaySeconds: 15
-            periodSeconds: 10
-            timeoutSeconds: 5
           env:
             - name: SPRING_PROFILES_ACTIVE
               value: prod
