--- a/k8s/base/order-scheduler.yaml
+++ b/k8s/base/order-scheduler.yaml
@@ -5,6 +5,7 @@ metadata:
   labels:
     app: order-scheduler
     tier: backend
+    probe: actuator
 spec:
   selector:
     matchLabels:
@@ -21,20 +22,6 @@ spec:
           imagePullPolicy: Always
           ports:
             - containerPort: 8080
-          livenessProbe:
-            httpGet:
-              path: /actuator/health/liveness
-              port: 8080
-            initialDelaySeconds: 15
-            periodSeconds: 10
-            timeoutSeconds: 5
-          readinessProbe:
-            httpGet:
-              path: /actuator/health/liveness
-              port: 8080
-            initialDelaySeconds: 15
-            periodSeconds: 10
-            timeoutSeconds: 5
           env:
             - name: SPRING_PROFILES_ACTIVE
               value: prod
