[candle-api] Reduce optimize parameter patterns.

--- a/bittrader-candle-api/src/main/resources/config/application-strategy.yaml
+++ b/bittrader-candle-api/src/main/resources/config/application-strategy.yaml
@@ -13,18 +13,19 @@ bittrader:
       default-long-time-frame: 26
       default-signal-time-frame: 9
       short-time-frame-from: 10
-      short-time-frame-to: 20
-      long-time-frame-from: 20
+      short-time-frame-to: 15
+      long-time-frame-from: 25
       long-time-frame-to: 30
       signal-time-frame-from: 5
-      signal-time-frame-to: 15
+      signal-time-frame-to: 10
     rsi:
       default-time-frame: 14
       default-buy-threshold: 20
       default-sell-threshold: 80
       time-frame-from: 10
-      time-frame-to: 20
-      buy-threshold-from: 15
+      time-frame-to: 15
+      buy-threshold-from: 20
       buy-threshold-to: 30
       sell-threshold-from: 70
-      sell-threshold-to: 85
+      sell-threshold-to: 80
+      threshold-step: 2
