[k8s] Optimize pod resources.

--- a/k8s/base/web.yaml
+++ b/k8s/base/web.yaml
@@ -56,3 +56,10 @@ spec:
                 secretKeyRef:
                   name: bittrader-web-secret
                   key: password
+          resources:
+            requests:
+              memory: "512Mi"
+              cpu: "250m"
+            limits:
+              memory: "1Gi"
+              cpu: "500m"
