--- a/k8s/base/candle-api.yaml
+++ b/k8s/base/candle-api.yaml
@@ -64,3 +64,10 @@ spec:
                 configMapKeyRef:
                   name: bittrader-backend-config
                   key: time_zone
+          resources:
+            requests:
+              memory: "1Gi"
+              cpu: "500m"
+            limits:
+              memory: "2Gi"
+              cpu: "500m"
