--- a/k8s/base/candle-feeder.yaml
+++ b/k8s/base/candle-feeder.yaml
@@ -28,3 +28,10 @@ spec:
                 configMapKeyRef:
                   name: bittrader-backend-config
                   key: time_zone
+          resources:
+            requests:
+              memory: "512Mi"
+              cpu: "250m"
+            limits:
+              memory: "1Gi"
+              cpu: "500m"
