--- a/k8s/base/order-api.yaml
+++ b/k8s/base/order-api.yaml
@@ -55,3 +55,10 @@ spec:
                 configMapKeyRef:
                   name: bittrader-backend-config
                   key: time_zone
+          resources:
+            requests:
+              memory: "1Gi"
+              cpu: "250m"
+            limits:
+              memory: "2Gi"
+              cpu: "500m"
