--- a/k8s/base/order-scheduler.yaml
+++ b/k8s/base/order-scheduler.yaml
@@ -31,3 +31,10 @@ spec:
                 configMapKeyRef:
                   name: bittrader-backend-config
                   key: time_zone
+          resources:
+            requests:
+              memory: "512Mi"
+              cpu: "250m"
+            limits:
+              memory: "1Gi"
+              cpu: "500m"
