--- a/k8s/base/phpmyadmin.yaml
+++ b/k8s/base/phpmyadmin.yaml
@@ -52,3 +52,10 @@ spec:
                   key: mysql_password
             - name: PMA_ARBITRARY
               value: "1"
+          resources:
+            requests:
+              memory: "512Mi"
+              cpu: "250m"
+            limits:
+              memory: "1Gi"
+              cpu: "500m"
